--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -65,6 +65,16 @@ h6 {
 footer {
   position: fixed;
   bottom: 0;
+  width: 100%;
+}
+footer::before {
+  content: "";
+  display: block;
+  height: 30px;
+  width: 100%;
+  background-image: url(https://i.imgur.com/9JGP4h7.png);
+  background-repeat: repeat-x;
+  /* background-size: cover; */
 }
 blockquote {
   position: relative;
@@ -355,8 +365,8 @@ iframe {
   height: 30px;
   width: 100%;
   background-image: url(https://i.imgur.com/9JGP4h7.png);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-repeat: repeat-x;
+  /* background-size: cover; */
 }
 
 #nav-menu .nav-button {
