--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -458,3 +458,11 @@ iframe {
 .valid-text {
   outline: 1px solid green !important;
 }
+
+/* Display between a minimum of 3 images per column */
+#img-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  margin: 1rem;
+}
