--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -3,20 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Home</title>
+    <title>Login</title>
     <meta name="description" content="Desription" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
-    <script defer type="text/javascript" src="../js/fetch.js"></script>
   </head>
   <body>
+    <!--Header -->
     <header>
       <h1>A Website</h1>
     </header>
     <div id="nav-menu" class="nav-menu-container">
       <div class="nav-menu">
-        <a href="./index.html" class="nav-button index on">HOME</a>
-        <a href="./login.html" class="nav-button login">LOG IN</a>
+        <a href="./index.html" class="nav-button index">HOME</a>
+        <a href="./login.html" class="nav-button login on">LOG IN</a>
         <a href="./registration.html" class="nav-button registration">
           SIGN UP
         </a>
@@ -25,12 +25,17 @@
       </div>
     </div>
     <div class="main-container">
-      <h2>Home</h2>
+      <h2>Log in</h2>
       <main>
-        <h3>Main page content</h3>
-        <div id="img-list"></div>
-        <div id="img-count"></div>
+        <form action="">
+          <label for="username">Username</label>
+          <input type="text" id="username" />
+          <label for="password">Password</label>
+          <input type="password" id="password" />
+          <button type="submit">Submit</button>
+        </form>
       </main>
     </div>
+    <footer>Footer &copy2022</footer>
   </body>
 </html>
