fixed more css that was bugging me

--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -36,9 +36,11 @@
   <body>
     {{> header}}
     {{> nav}}
-    <div class="main-container">
-    {{{body}}}
+    <div class="flex-wrapper">
+      <div class="main-container">
+      {{{body}}}
+      </div>
+      {{> footer}}
     </div>
-    {{> footer}}
   </body>
 </html>
