--- a/application/public/css/style.css
+++ b/application/public/css/style.css
@@ -64,7 +64,6 @@ h6 {
 }
 footer {
   position: static;
-  bottom: 0;
   width: 100%;
 }
 footer::before {
@@ -326,37 +325,11 @@ iframe {
   border: 0.1rem solid #bab5a1;
 }
 
-/* Nav */
-#nav-menu,
-#nav-menu .fixed {
-  background-color: transparent;
-  display: block;
-  position: static;
-  left: 0px;
-  top: 75px;
-  height: auto;
-  width: 100%;
-  border: none;
-}
-
 .nav-menu-container .nav-menu {
+  overflow: visible;
   display: flex;
-  justify-content: space-between;
-  margin: 25px 35px 0px 125px;
-  height: 70px;
-}
-
-#nav-menu::before {
-  content: "";
-  display: block;
-  background: center;
-  background-image: url(https://i.imgur.com/xeTob40.png);
-  background-repeat: repeat-y;
-  position: absolute;
-  top: 110;
-  left: 60px;
-  height: 50px;
-  width: 30px;
+  justify-content:center;
+  gap: 50px;
 }
 
 #nav-menu::after {
@@ -374,18 +347,17 @@ iframe {
   background: linear-gradient(to right, #b3ac98, #aea993);
   color: #4d4940;
   display: table-cell;
-  position: static;
-  width: 14%;
+  position: relative;
+  width: auto;
   height: 50px;
   line-height: 50px;
-  padding: 0px;
-  text-align: center;
+  padding: 5px;
+  text-align: justify;
   text-transform: uppercase;
   font-size: 15pt;
   letter-spacing: 3.5px;
   text-indent: 0px;
-  border-radius: 3px 3px 3px 3px;
-  overflow: hidden;
+  overflow: visible;
   white-space: nowrap;
   box-shadow: 0px 0px 6px #aea993;
   user-select: none;
@@ -406,6 +378,16 @@ iframe {
   background: #5f5a4a;
   color: #d1cbb3;
   box-shadow: 0px 0px 6px #5f5a4a;
+}
+
+#nav-menu .nav-button.on::before {
+  content: "";
+  position: absolute;
+  left: -45px;
+  height: 29px;
+  width: 42px;
+  background: url("https://i.imgur.com/lsEiej1.png");
+  top: 17.5px;
 }
 
 /* BAD CALC, FIX LATER */
@@ -447,11 +429,25 @@ iframe {
   left: calc(75px + (100% - 160px) * 0.172 * 4);
 } */
 
-/* Spacing from top of page */
-.main-container {
-  margin-top: 0px;
-  min-height: 67.5vh;
-  padding-bottom: 1%;
+/* Flex wrapper */
+.flex-wrapper {
+  display: flex;
+  min-height: 85vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+#tag-container::before {
+  content: "";
+  display: block;
+  background-image: url(https://i.imgur.com/xeTob40.png);
+  background-repeat: repeat-y;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  height: auto;
+  width: 30px;
 }
 
 /* Registration valid/invalid */
@@ -473,6 +469,6 @@ iframe {
 
 /* fade out images */
 .fade-out {
-  opacity: 0.0;
+  opacity: 0;
   transition: opacity 0.5s ease-in-out;
 }
