changed the pages a bit

--- a/application/views/partials/nav.hbs
+++ b/application/views/partials/nav.hbs
@@ -1,11 +1,11 @@
 <div id="nav-menu" class="nav-menu-container">
   <div class="nav-menu">
     <a href="/" class="nav-button">HOME</a>
+    <a href="/index" class="nav-button">INDEX</a>
     <a href="/login" class="nav-button">LOG IN</a>
     <a href="/register" class="nav-button">
       SIGN UP
     </a>
     <a href="/postimage" class="nav-button">NEW POST</a>
-    <a href="/posts/default" class="nav-button">VIEW POSTS</a>
   </div>
 </div>
