--- a/application/views/login.hbs
+++ b/application/views/login.hbs
@@ -2,7 +2,13 @@
   <body>
     <h2>Log in</h2>
     <main>
-      <form action="">
+      <form
+        id="login-form"
+        class="input-form"
+        action="/users/login"
+        method="POST"
+        enctype="application/x-www-form-urlencoded"
+      >
         <label for="username">Username</label>
         <input type="text" id="username" />
         <label for="password">Password</label>
