--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -2,18 +2,27 @@
   <body>
     <h2>Sign up</h2>
     <main>
-      <form action="">
+      <form
+        id="reg-form"
+        method="POST"
+        action="/users/register"
+        enctype="application/x-www-form-urlencoded"
+      >
         <label for="username">Username</label>
         <br />
-        <input type="text" id="username" />
+        <input type="text" id="username" name="username" />
         <ul>
           <li>At least 3 characters</li>
           <li>Starts with a letter</li>
           <li>Contains only letters and numbers</li>
         </ul>
+        <label for="email">Email</label>
+        <br />
+        <input type="text" id="email" name="email" />
+        <br />
         <label for="password">Password</label>
         <br />
-        <input type="password" id="password" />
+        <input type="password" id="password" name="password" />
         <ul>
           <li>At least 8 characters</li>
           <li>Contains at least one number</li>
@@ -21,9 +30,9 @@
           <li>Contains at least one lowercase letter</li>
           <li>Contains at least one special character: / * - + ! @ # $ ^ & ~ [ ]</li>
         </ul>
-        <label for="confirmpassword">Confirm</label>
+        <label for="cpassword">Confirm</label>
         <br />
-        <input type="password" id="confirmpassword" />
+        <input type="password" id="cpassword" name=""cpassword/>
         <br />
         <input type="checkbox" name="over13" id="over13" />
         <label for="over13">I am at least 13 years old</label>
