--- a/application/views/layouts/layout.hbs
+++ b/application/views/layouts/layout.hbs
@@ -43,4 +43,20 @@
       {{> footer}}
     </div>
   </body>
+  {{#if isLoggedIn}}
+  <script>
+    console.log("step 1");
+    document.getElementById('logout-button')
+    .addEventListener('click', function(ev) {
+      console.log("step2");
+      fetch('/users/logout', {method: 'POST'})
+        .then(response => response.json())
+        .then(function(res_json) {
+          console.log(res_json);
+          window.location.replace('/');
+        })
+        .catch(err => console.log(err));
+      })
+  </script>
+  {{/if}}
 </html>
