--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,9 +1,12 @@
 <html>
   <body>
-    <h2>Home</h2>
+    <h2>Posts</h2>
     <main>
-      <div id="img-list"></div>
-      <div id="img-count"></div>
+      <div id="img-list">
+      {{#each results}}
+        {{> card this}}
+      {{/each}}
+      </div>
     </main>
   </body>
 </html>
