not done but out of time

--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -3,6 +3,6 @@
   <div class="img-info">
     <p>{{this.title}}</p>
     <p>{{this.desc}}</p>
-    <a href="/posts/{{this.id}}"></a>
+    <a href="/posts/{{this.id}}">Link</a>
   </div>
 </span>
