--- a/application/views/partials/comment.hbs
+++ b/application/views/partials/comment.hbs
@@ -1,5 +1,5 @@
 <div id="message-{{id}}" class="comment">
-  <strong>@{{username}}</strong>
+  <strong>{{username}}</strong>
   <p>{{text}}</p>
   <div> {{formatDates createdAt}}</div>
 </div>
