--- a/application/views/postimage.hbs
+++ b/application/views/postimage.hbs
@@ -11,7 +11,8 @@
         <label for="Title">Title</label><br />
         <input type="text" id="title" name="title" /><br />
         <label for="desc">Description</label><br />
-        <textarea name="desc" id="desc" cols="50" rows="7"></textarea><br />
+        <textarea id="desc" name="description" cols="50" rows="7"></textarea><br
+        />
         <input type="file" name="uploadImage" id="upload-image" /><br />
         <input type="checkbox" name="userpolicy" id="userpolicy" />
         <label for="userpolicy">
