--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -2,7 +2,7 @@
   <img src="{{this.thumbnail}}" alt="img not found :(" />
   <div class="img-info">
     <p>{{this.title}}</p>
-    <p>{{this.desc}}</p>
+    <p>{{this.description}}</p>
     <a href="/posts/{{this.id}}">Link</a>
   </div>
 </span>
