--- a/application/views/home.hbs
+++ b/application/views/home.hbs
@@ -1,8 +1,17 @@
 <html>
   <body>
-    <h2>WELCOME {{username}}</h2>
+    <h2>WELCOME >{{username}}</h2>
     <main>
-        <input type="text" id="searchbar"></input>
+      <div id="main-searchbar">
+        <form id="main-searchbar"
+          method="GET"
+          action="/posts/search"
+          enctype="application/x-www-form-urlencoded"
+        >
+          <button type="submit">⁝</button>
+          <input type="text" id="main-search-text" name="search" />
+        </form>
+      </div>
     </main>
   </body>
 </html>
