search and more css

--- a/application/views/viewpost.hbs
+++ b/application/views/viewpost.hbs
@@ -6,7 +6,7 @@
           <h2>{{currentPost.title}}</h2>
           <img src="/{{currentPost.image}}" alt="image not found :(" />
           <div id="post-info">
-            <div id="username" class="post-info">{{currentPost.username}}</div>
+            <div id="username" class="post-info">>{{currentPost.username}}</div>
             <div id="post-date" class="post-info">{{formatDate currentPost.createdAt}}</div>
           </div> 
           <fieldset>
