--- a/application/views/index.hbs
+++ b/application/views/index.hbs
@@ -1,11 +1,28 @@
 <html>
   <body>
-    <h2>Posts</h2>
     <main>
+      <div id="index-searchbar">
+        <form
+          id="index-search-text"
+          method="GET"
+          action="/posts/search"
+          enctype="application/x-www-form-urlencoded"
+        >
+          <input
+            type="text"
+            id="index-search-text"
+            class="search-text"
+            name="q"
+            value="{{searchValue}}"
+          />
+          <br />
+          <button class="submit-button center wide" type="submit">Search</button>
+        </form>
+      </div>
       <div id="img-list">
-      {{#each results}}
-        {{> card this}}
-      {{/each}}
+        {{#each results}}
+          {{> card this}}
+        {{/each}}
       </div>
     </main>
   </body>
