--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -1,8 +1,9 @@
 <span class="img-card">
-  <img src="{{this.thumbnail}}" alt="img not found :(" />
   <div class="img-info">
-    <p>{{this.title}}</p>
-    <p>{{this.description}}</p>
-    <a href="/posts/{{this.id}}">Link</a>
+    <a class="img-link" href="/posts/{{this.id}}" 
+      title=
+      'Title: "{{this.title}}" &#10;Desc: &#10;"{{this.description}}"'>
+      <img src="/{{this.thumbnail}}" alt="img not found :(" />
+    </a>
   </div>
 </span>
