--- a/application/views/partials/card.hbs
+++ b/application/views/partials/card.hbs
@@ -1,8 +1,10 @@
 <span class="img-card">
   <div class="img-info">
-    <a class="img-link" href="/posts/{{this.id}}" 
-      title=
-      'Title: "{{this.title}}" &#10;Desc: &#10;"{{this.description}}"'>
+    <a
+      class="img-link"
+      href="/posts/{{this.id}}"
+      title='Title: "{{this.title}}" &#10;Desc: &#10;"{{this.description}}"'
+    >
       <img src="/{{this.thumbnail}}" alt="img not found :(" />
     </a>
   </div>
