--- a/application/views/registration.hbs
+++ b/application/views/registration.hbs
@@ -32,7 +32,7 @@
         </ul>
         <label for="cpassword">Confirm</label>
         <br />
-        <input type="password" id="cpassword" name=""cpassword/>
+        <input type="password" id="cpassword" name="cpassword" />
         <br />
         <input type="checkbox" name="over13" id="over13" />
         <label for="over13">I am at least 13 years old</label>
